@@ -1,5 +1,11 @@
 2011-06-13
 
+	* src/textview.c
+	  src/mimeview.[ch]: implemented popup menu of attachments in text
+	  view.
+
+2011-06-13
+
 	* src/textview.c: fixed handling of button release event.
 
 2011-06-10
